# pcdet_ros2

./: .gitattributes  Dockerfile  README.md  setup.cfg  setup.py
config/: pp_multihead_nds.param.yaml
docker/: build_OpenPCDet.sh  build_container.sh  entrypoint.sh  run_container.sh  run_pcdet.sh
launch/: parta2_free.launch.xml  pcdet.launch.py  pp_multihead_nds.launch.xml
pcdet_ros2/: LICENSE  package.xml  pcdet_node.py
pcdet_ros2/config/: cbgs_second_multihead_nds.param.yaml  parta2.param.yaml  parta2_free.param.yaml  pcdet_pvrcnn.param.yaml  pointpillar.param.yaml  rviz.rviz
pcdet_ros2/launch/: second_multihead_nds.launch.xml
pcdet_ros2/pcdet_ros2/: config.py  pcdet_node.py
